# legend_of_mierda_3

./: Cargo.toml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  loading.rs  sprites.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/cutscene/: Cargo.toml
crates/cutscene/src/: lib.rs
crates/entities/: Cargo.toml
crates/entities/src/: controls.rs  lib.rs  player.rs  text_indicator.rs
crates/entities/src/characters/: enemy.rs  mierda.rs  mod.rs  pendejo.rs  psychiatrist.rs
crates/entities/src/gameplay/: gameover.rs  mod.rs  scoring.rs  waves.rs
crates/entities/src/items/: biboran.rs  item.rs  mod.rs  pizza.rs
crates/entities/src/level_objects/: light.rs
crates/entities/src/weapons/: machete.rs  pill.rs  speargun.rs  weapon_arrow.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/ldtk/: Cargo.toml
crates/ldtk/src/: ldtk.rs  lib.rs
crates/splashscreen/: Cargo.toml
crates/splashscreen/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: game.rs  menu.rs
src/: main.rs
