[package]
name = "legend_of_mierda"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18" }
lom_assets = { path = "crates/assets" }
lom_audio = { path = "crates/audio" }
lom_cutscene = { path = "crates/cutscene" }
lom_entities = { path = "crates/entities" }
lom_game = { path = "crates/game" }
lom_ldtk = { path = "crates/ldtk" }
lom_splashscreen = { path = "crates/splashscreen" }
lom_ui = { path = "crates/ui" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]
