[package]
name = "legend_of_mierda"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18" }
bevy_kira_audio = "0.25"
bevy_asset_loader = "0.26"
bevy_tweening = "0.15"
bevy_rapier2d = "0.33.0"
pecs = { git = "https://github.com/stillonearth/pecs.git", rev = "0b274c9" }
bevy_ecs_ldtk = { version = "0.14", features = [
    "default",
    "derive",
    "atlas",
    "render",
] }
lom_assets = { path = "crates/assets" }
lom_audio = { path = "crates/audio" }
lom_cutscene = { path = "crates/cutscene" }
lom_entities = { path = "crates/entities" }
lom_game = { path = "crates/game" }
lom_ldtk = { path = "crates/ldtk" }
lom_splashscreen = { path = "crates/splashscreen" }
lom_ui = { path = "crates/ui" }
bevy-inspector-egui = "0.36.0"
bevy_particle_systems = "0.13.0"
bevy-scene-hook = { git = "https://github.com/stillonearth/bevy-scene-hook.git", rev ="663cab4" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]
