[package]
name = "lom_audio"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.18"
bevy_kira_audio = "0.25"
lom_game = { path = "../game" }
lom_assets = { path = "../assets" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]
