[package]
name = "lom_ldtk"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18" }
# bevy_magic_light_2d = { git = "https://github.com/TrveSoft/bevy-magic-light-2d.git", rev = "d9f88e2" }
bevy_rapier2d = "0.33.0"
bevy_ecs_ldtk = { version = "0.14", features = [
    "default",
    "derive",
    "atlas",
    "render",
] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]
